<resources>
    <string name="app_name">Slotify</string>
    <string name="login_button">Log in</string>
    <string name="logon_button">Log on</string>
    <string name="or_word">or</string>
    <string name="welcome">Welcome to our application!</string>
    <string name="account_question">You have an account created?</string>
    <string name="change_language">Change language</string>
    <string name="return_to_setup">&lt; Return to main page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="system_language">System language</string>
    <string name="client_word">Client</string>
    <string name="enterprise_word">Enterprise</string>
    <string name="go_back">Go back</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="selectUserType">Select your user type:</string>
    <string name="user_text_data">Enter your user details</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="email">Enter your email</string>
    <string name="enter_secure_password">Enter a secure password</string>
    <string name="verify_password_security">Make sure it includes numbers, special characters, uppercase and lowercase letters</string>
    <string name="enter_password">Enter your password</string>
    <string name="security_level">Security level</string>
    <string name="low_level">Low</string>
    <string name="medium_level">Medium</string>
    <string name="high_level">High</string>
    <string name="password_confirm">Confirm your password</string>
    <string name="name_enter">Enter your name</string>
    <string name="last_name_enter">Enter your last name</string>
    <string name="select_user_image">Sellect a profile picture</string>
    <string name="gallery_sellect_message">Sellect from your gallery</string>
    <string name="show_user_name_in_reserves">Show user name despite of your complete name while booking .(By default)</string>
    <string name="user_name_indications">The username must be unique. Allowed characters are letters, numbers, hyphens (-), and underscores (_). All of this information can be changed later.</string>
    <string name="enter_organitation_data">Enter your organization data</string>
    <string name="enterprise_image_select">Select an image that represents your company:\nYou can change it in settings later.</string>
    <string name="enter_name_desc">Enter the name and a description:</string>
    <string name="company_name">Company name</string>
    <string name="brief_description">Brief description</string>
    <string name="physical_enterprise_adress">Physical address of your enterprise</string>
    <string name="enterprise_direction">Enterprise direction</string>
    <string name="enter_simultaneous_services">Enter the quantity services that you can offer simultaneously</string>
    <string name="simultaneous_numer_explication">This number will be significant, as exceeding the specified amount will prevent customers from booking services until an existing reservation is completed. This number can be changed later.</string>
    <string name="chose_simultaneous_services">Chose the number of simultaneous services:</string>
    <string name="succesful_account_creation">Account created successfully</string>
    <string name="account_creation_confirmation">Your account is created correctly in Slotify.\n\nGo to the log in page to enter with your account.</string>
    <string name="log_in_title">Log in</string>
    <string name="log_in_message">Log in with your email</string>
    <string name="forgotten_password">You have forgotten your password?</string>
    <string name="password_recuperation_message">We have sent a 6-digit recovery code to your email address. Please check your inbox and spam folder.</string>
    <string name="enter_the_recuperation_code">Enter the recuperation code</string>
    <string name="password_changued_correctry">The password is changed correctly</string>
    <string name="account_recuperated_message">Your account has been successfully recovered.\n\nGo into the log in page to enter with your account.</string>
    <string name="welcome_greeting">Welcome back,</string>
    <string name="you_have">You have</string>
    <string name="pending_word">pending</string>
    <string name="left_after">left</string>
    <string name="see_more">See more</string>
    <string name="shortcouts">Shortcuts</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="search_reserve">Search reserve</string>
    <string name="reserve_a_service">Reserve a service</string>
    <string name="chat_for_inquiries">Chat for inquiries</string>
    <string name="close_sesion">Close session</string>
    <string name="inquiries">Inquiries</string>
    <string name="appointments">Appointments</string>
    <string name="search_in_calendar">Search by reserve date or name</string>
    <string name="appointment_cancell">Cancel appointment</string>
    <string name="reserve_appointment">Reserve an appointment</string>
    <string name="service_to_reserve_question">What service you want to reserve?</string>
    <string name="select_cattegory_message">Select the relevant category or enter the desired service:</string>
    <string name="search_text">Search...</string>
    <string name="hostelery_cat">Food and Beverage</string>
    <string name="beauty_cat">Beauty and Health</string>
    <string name="mechanical_workshops">Mechanical workshops</string>
    <string name="site_where_reserve">Where do you want to reserve?</string>
    <string name="find_by_enterprise_name">Find by enterprise name</string>
    <string name="in_word">In</string>
    <string name="find_by_service_name">Find by service name</string>
    <string name="see_ubication_in_gm">See location in Google Maps</string>
    <string name="sellect_date">Select date</string>
    <string name="check_info">Please check that the information is correct</string>
    <string name="payment_moment_acclaration">The payment will be made in the enterprise location once the service is completed</string>
    <string name="succesful_reserve">The appointment has reserved correctly!</string>
    <string name="reserve_mail_send_message">We send you an confirmation email with the appointment details</string>
    <string name="appointment_summary">Appointment resume:</string>
    <string name="back_to_home">Back to home</string>
    <string name="today_word">Today</string>
    <string name="yesterday_word">Yesterday</string>
    <string name="type_message">Type your message</string>
    <string name="chat_history">Chat history</string>
    <string name="chat_settings">Appointments chat settings</string>
    <string name="delete_chats">Delete chats</string>
    <string name="bug_inform">Inform about an error</string>
    <string name="modify_user_data">Modify user data</string>
    <string name="discard">Discard</string>
    <string name="return_to_settings">Return to settings</string>
    <string name="delete_account">Delete your account</string>
    <string name="edit_name_description">Edit the name and the description</string>
    <string name="settings">Settings</string>
    <string name="about">About application</string>
    <string name="aplication_theme">Application theme</string>
    <string name="clear_mode">Clear mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="system_theme">Follow the system theme</string>
    <string name="slotify" translatable="false">Slotify</string>
    <string name="your_reserve_app">Your reserve app</string>
    <string name="version_word">Version</string>
    <string name="_version_number" translatable="false">ALFA 0.1.0</string>
    <string name="authors_word">Authors</string>
    <string name="_app_authors" translatable="false">Aitor Pascual Jiménez\nJesús García González\nRodrigo Fernández Sabadías</string>
    <string name="used_tools_words">Used tools</string>
    <string name="_used_tools" translatable="false">Keycloak\nElasticSearch\nPostgreSQL\nSpring Boot\nKubernetes\nJira\nGitHub</string>
    <string name="buy_us_a_coffee" translatable="false"><u>Buy us a coffee!</u></string>
    <string name="upcoming_reserves">upcoming reserves</string>
    <string name="manage_exceptions">Manage exceptions</string>
    <string name="search_reserves">Search reserves</string>
    <string name="cancel_a_reserve">Cancel an appointment</string>
    <string name="add_service">Add a service</string>
    <string name="services_word">Services</string>
    <string name="go_back_to_reserves">Go back to reserves</string>
    <string name="appointment_date_time">Date and time of the appointment</string>
    <string name="cancel_reserve">CANCEL RESERVE</string>
    <string name="exceptions_word">Exceptions</string>
    <string name="exceptions_explication">These exceptions reduce the number of services your company can offer during the specified time.</string>
    <string name="exceptions_action">Select an exception to edit it or add a new one</string>
    <string name="start_word">Start</string>
    <string name="end_word">End</string>
    <string name="add_exception">Add an exception</string>
    <string name="establish_a_period">Establish the corresponding period</string>
    <string name="establish_period_button">ESTABLISH THE PERIOD</string>
    <string name="number_of_services_with_exception">Number of simultaneous services with the exception applied</string>
    <string name="established_period">Established_period</string>
    <string name="discard_word">Discard</string>
    <string name="select_service_to_edit">Sellect a service to edit</string>
    <string name="enter_name_description_photo">Sellect name, description and photo</string>
    <string name="edit_the_service">Edit the service</string>
    <string name="service_name">Service name</string>
    <string name="establish_price">Establish the price</string>
    <string name="reserve_duration">Enter the reserve duration</string>
    <string name="coint_format" translatable="false">€</string>
    <string name="time_format">minuts</string>
    <string name="set_service_schedules">Set the service schedules</string>
    <string name="set_shedules_button">SELECT SCHEDULES</string>
    <string name="selected_days">Selected days</string>
    <string name="delete_word">Delete</string>
    <string name="return_to_service_settings">Return to service settings</string>
    <string name="edit_the_schedule">Edit the schedule</string>
    <string name="schedule_explication">Select the days of the week you wish to offer service</string>
    <string name="schedule_down_explication">For each selected day, specify a time slot</string>
    <string name="monday_word">Monday</string>
    <string name="tuesday_word">Tuesday</string>
    <string name="wednesday_word">Wednesday</string>
    <string name="thursday_word">Thursday</string>
    <string name="friday_word">Friday</string>
    <string name="saturday_word">Saturday</string>
    <string name="sunday_word">Sunday</string>
    <string name="phone_prefix">Prefix</string>
    <string name="enter_user_data">Enter your user data</string>
    <string name="password_word">Password</string>
    <string name="security_error_title">Insufficient Security</string>
    <string name="low_password_error">The password is weak. Please use a stronger combination of characters (include numbers and symbols).</string>
    <string name="contact_data">Contact data</string>
    <string name="place_details">Place details</string>
    <string name="company_image_edit">Edit your company image</string>
    <string name="edit_the_place">Edit the direction of your company</string>
    <string name="discard_changes_link">Discard changes</string>
    <string name="edit_exception">Edit exception</string>
</resources>