<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/outline_construction_24"
        android:title="@string/settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home" />
    <item
        android:id="@+id/calendarFragment"
        android:title="@string/calendar" />
    <item
        android:id="@+id/viewAllReservesFragment"
        android:title="@string/search_reserves" />
    <item
        android:id="@+id/viewAllReservesFragment"
        android:title="@string/cancel_a_reserve" />
    <item
        android:id="@+id/addServiceFragment"
        android:title="@string/add_service" />
</menu>