<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_dark"
        android:title="@string/home" />
    <item
        android:id="@+id/viewAllReservesFragment"
        android:icon="@drawable/home_dark"
        android:title="@string/appointments" />
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/outline_calendar_24"
        android:title="@string/calendar" />
    <item
        android:id="@+id/servicesFragment"
        android:icon="@drawable/outline_scissors_24"
        android:title="@string/services_word" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/outline_construction_24"
        android:title="@string/settings" />

</menu>
